--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" href="https://i.postimg.cc/bN80phvj/IMG-2903.jpg" sizes="16x16">
 <title>Binary Trading Mastery</title>
 <style>
 /* Global Styles */
@@ -55,10 +56,6 @@ header {
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-.cta-button:hover {
-    background: linear-gradient(135deg, #ff7300, #ff5400);
-    transform: scale(1.1);
-}
 
 /* Course Modules Section */
 section {
@@ -222,44 +219,37 @@ footer p {
         margin: 0 auto;
     }
 }
+
+
 </style>
 </head>
 <body>
 <header>
+
     <div class="hero">
         <h1>Unlock Your Potential in Binary Trading</h1>
         <p>Master the Art of Binary Options Trading – From Beginner to Pro!</p>
-        <a href="https://fill-information.vercel.app/" class="cta-button">Join Now – Start Your Journey Today!</a>
+        <a class="cta-button">Join Now – Start Your Journey Today!</a>
     </div>
 </header>
 <section id="course" class="course-modules">
-    <h2>Course Modules</h2>
+    <h2>TYPES OF SERVICES</h2>
     <div class="module-list">
-        <div class="module">
-            <h3>Introduction to Binary Trading</h3>
-            <p>Learn the basics of binary options and how the market works.</p>
+        <div class="module" onclick="window.location.href='https://no-emotion.vercel.app/group.html';" style="cursor: pointer;">
+            <h3>Premium Signal Group</h3>
+            <p>An exclusive Telegram group dedicated to providing high-quality binary trading signals. Ultimate destination for highly accurate trading signals. In this exclusive group, we provide highly accurate live signals, future signals, and news signals to keep you ahead of the market. Whether you're looking for real-time updates, strategic future trades, or insights driven by market-moving news, our group has you covered. Join now to access reliable signals and take your trading journey to the next level!</p>
+       
         </div>
-        <div class="module">
-            <h3>Price Action</h3>
+        <div class="module" onclick="window.location.href='https://no-emotion.vercel.app/bots.html';" style="cursor: pointer;">
+            <h3>Accurate Signal Bots</h3>
             <p>
-Price action analyzes price movements to predict trends using charts and patterns.</p>
+Experience precision like never before with our highly accurate signal bots. Designed for traders who demand high accuracy, these bots analyze market trends in real-time to provide consistently accurate trading signals. Whether you're a beginner or an experienced trader, our bots ensure you stay ahead in the market with minimal effort and maximum results. Trust the power of automation and accuracy to elevate your trading success!</p>
         </div>
-        <div class="module">
-            <h3>Risk Management</h3>
-            <p>Learn strategies to minimize risks and protect your investment.</p>
-        </div>
-       <div class="module">
-         <h3>Money Management</h3>
-         <p>It controls risk and trade size to protect capital and maximize profits.</p>
-      </div>
-        <div class="module">
-            <h3>Advanced Strategies</h3>
-            <p>Discover advanced strategies for high-probability trades.</p>
-        </div>
-      <div class="module">
-        <h3>And Many More</h3>
-        <p>There are many more things to explore for enhancing trading career.</p>
-    </div>
+<div class="module" onclick="window.location.href='https://no-emotion.vercel.app/combo.html';" style="cursor: pointer;">
+     <h3>Combo Deal</h3>
+       <p>Unlock incredible discount with our exclusive Combo Deal! Purchase both products together and enjoy a massive 30% discount on the total price. This is the perfect opportunity to get more value while spending less. Don’t miss out—combine, save, and enjoy!</p>
+       </div>
+ 
 </section>
 <section id="ratings" class="ratings">
     <h2>People's Ratings</h2>
