--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ footer p {
 Experience precision like never before with our highly accurate signal bots. Designed for traders who demand high accuracy, these bots analyze market trends in real-time to provide consistently accurate trading signals. Whether you're a beginner or an experienced trader, our bots ensure you stay ahead in the market with minimal effort and maximum results. Trust the power of automation and accuracy to elevate your trading success!</p>
         </div>
 <div class="module" onclick="window.location.href='https://no-emotion.vercel.app/combo.html';" style="cursor: pointer;">
-     <h3>Combo Deal</h3>
+     <h3>Special Combo Deal</h3>
        <p>Unlock incredible discount with our exclusive Combo Deal! Purchase both products together and enjoy a massive 30% discount on the total price. This is the perfect opportunity to get more value while spending less. Don’t miss out—combine, save, and enjoy!</p>
        </div>
  
