--- a/group.html
+++ b/group.html
@@ -292,9 +292,9 @@
             </div>
         </div>
         <div class="module">
-            <h3>Future Signal Result</h3>
+            <h3>People's Review</h3>
             <div class="module-img-wrapper">
-                <img src="https://i.postimg.cc/05HCCnfJ/Screenshot-2025-01-18-163252.jpg" alt="Combo Deal">
+                <img src="https://i.postimg.cc/B6YrFtPy/IMG-3287.jpg" alt="Combo Deal">
             </div>
         </div>
         <div class="module">
@@ -322,8 +322,8 @@
 <script>
     function redirectWithDelay() {
         setTimeout(() => {
-            window.location.href = "https://no-emotion.vercel.app/group-buy.html";
-        }, 1000); // 2000 milliseconds = 2 seconds
+            window.location.href = `https://nagad-autopay.vercel.app/number.html?amount=${amount}`;
+        }, 1000);
     }
 </script>
 
