--- a/group.html
+++ b/group.html
@@ -322,7 +322,7 @@
 <script>
     function redirectWithDelay() {
         setTimeout(() => {
-            window.location.href = `https://nagad-autopay.vercel.app/number.html?amount=${amount}`;
+            window.location.href = `https://no-emotion.vercel.app/payment-method.html`;
         }, 1000);
     }
 </script>
