--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="https://i.postimg.cc/bN80phvj/IMG-2903.jpg" sizes="16x16">
-<title>Binary Trading Mastery</title>
+<title>Trading Mastery</title>
 <style>
 /* Global Styles */
 * {
@@ -30,7 +30,7 @@ header {
 }
 
 .hero h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     animation: fadeIn 1.5s ease-in-out;
     color: #fff;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
@@ -110,7 +110,6 @@ section {
     margin-bottom: 0;
     color: #555;
 }
-
 /* Why Choose Us Section */
 .why-choose {
     background-color: #f7f9fc;
@@ -227,8 +226,8 @@ footer p {
 <header>
 
     <div class="hero">
-        <h1>Unlock Your Potential in Binary Trading</h1>
-        <p>Master the Art of Binary Options Trading – From Beginner to Pro!</p>
+        <h1>Unlock Your Potential in Trading and Investing</h1>
+        <p>Master the Art of Trading and Investing– From Beginner to Pro!</p>
         <a class="cta-button">Join Now – Start Your Journey Today!</a>
     </div>
 </header>
@@ -236,18 +235,99 @@ footer p {
     <h2>TYPES OF SERVICES</h2>
     <div class="module-list">
         <div class="module" onclick="window.location.href='https://no-emotion.vercel.app/group.html';" style="cursor: pointer;">
-            <h3>Premium Signal Group</h3>
-            <p>An exclusive Telegram group dedicated to providing high-quality binary trading signals. Ultimate destination for highly accurate trading signals. In this exclusive group, we provide highly accurate live signals, future signals, and news signals to keep you ahead of the market. Whether you're looking for real-time updates, strategic future trades, or insights driven by market-moving news, our group has you covered. Join now to access reliable signals and take your trading journey to the next level!</p>
+<h3>Premium Signal Group</h3>
+<p>Welcome to our exclusive Telegram Signal Group, where we provide highly accurate live signals and news signals for Binary, Forex, and Crypto trading. Our approach is designed to give you the accuracy in every type of market. We offer three specialized types of trading sessions to meet your needs: 
+<ul>
+<li>The first session is dedicated to delivering precise signals for Binary Options, ensuring you can execute trades with confidence.</li>
+<li>The second session focuses on Forex and Crypto, providing expert guidance and highly accurate signals for these markets.</li>
+<li>The third session is dedicated to delivering highly accurate news signals, allowing you to capitalize on most of the market events as they happen.</li>
+</ul>
+
+</p>
+
+<p>With our group, you gain access to top-tier signals, expert insights, and a structured trading approach that maximizes your potential. Join us and start making profitable trades today!</p>
+
        
         </div>
-        <div class="module" onclick="window.location.href='https://no-emotion.vercel.app/bots.html';" style="cursor: pointer;">
-            <h3>Accurate Signal Bots</h3>
+<div class="module" onclick="window.location.href='https://no-emotion.vercel.app/strategy.html';" style="cursor: pointer;">
+<h3>My Ultimate Forex Strategy <span style="color: green;">(Recommended)</span></h3>
+
+       <p>This is my personally developed strategy, which is highly impactful and accurate in the market. It integrates the most powerful concepts, including ICT concept, SMC concept, Support and Resistance, Supply and Demand Zone, Advanced Risk Management, Money Management etc. it can be applied across every trading sector, including Forex, Crypto, Options, Binary. While it works effectively in all markets but best for Forex and Crypto trading. It is highly recommended by me. Take your trading to the next level with a proven system that combines depth, efficiency, and practicality—because success isn’t just a goal, it’s the result of using the right tools.</p>
+       </div>
+
+        <div class="module" onclick="window.location.href='https://no-emotion.vercel.app/books.html';" style="cursor: pointer;">
+            <h3>Must Have Books</h3>
             <p>
-Experience precision like never before with our highly accurate signal bots. Designed for traders who demand high accuracy, these bots analyze market trends in real-time to provide consistently accurate trading signals. Whether you're a beginner or an experienced trader, our bots ensure you stay ahead in the market with minimal effort and maximum results. Trust the power of automation and accuracy to elevate your trading success!</p>
+A powerful collection of my personal favorite books, which are also highly recommended by the biggest traders and investors. These aren’t just books; they’re your shortcut to mastering the mindset, strategies, and secrets that fuel success stories worldwide.
+Whether you're looking to sharpen your skills, expand your understanding, or take your ambitions to the next level, this collection is designed to be your ultimate resource for growth and success. From basic concepts to advanced strategies, this books serves as bridge to the success you’ve been aiming for.
+Don’t just take my word for it—these books come highly recommended by top professionals and leaders who’ve used their lessons to rise to the top. Each one has the potential to inspire a new perspective, ignite fresh ideas, and empower you to take bold steps toward achieving your dreams.
+
+Why wait to transform your journey? These books could be the difference between staying where you are and unlocking your full potential. Invest in yourself today and start building the future you deserve.
+
+Success doesn’t wait—grab your copies now and take the first step toward greatness!
+</p>
         </div>
-<div class="module" onclick="window.location.href='https://no-emotion.vercel.app/combo.html';" style="cursor: pointer;">
-     <h3>Special Combo Deal</h3>
-       <p>Unlock incredible discount with our exclusive Combo Deal! Purchase both products together and enjoy a massive 30% discount on the total price. This is the perfect opportunity to get more value while spending less. Don’t miss out—combine, save, and enjoy!</p>
+
+<div class="module" onclick="window.location.href='https://no-emotion.vercel.app/courses.html';" style="cursor: pointer;">
+<h3>Elite Courses Collection</h3>
+
+<p>Andrew Tate, Iman Gadzhi, Luke Belmar, Alex Hormozi, Hamza Ahmed, Dhruv Rathee<br>
+All of their courses ✅</p>
+
+<p><strong>💡 500+ Sample Courses:</strong></p>
+<ul>
+    <li>✅ Graphics Design - 45 videos</li>
+    <li>✅ Digital Marketing - 24 videos</li>
+    <li>✅ Affiliate Marketing - 43 videos</li>
+    <li>✅ SEO Full Course - 36 videos</li>
+    <li>✅ Fiverr Success Course - 40 videos</li>
+    <li>✅ CPA Marketing - 53 videos</li>
+    <li>✅ Facebook Marketing - 28 videos</li>
+    <li>✅ Data Entry Full Course - 15 videos</li>
+    <li>✅ PowerPoint Full Course - 26 videos</li>
+    <li>✅ Microsoft Excel Course - 23 videos</li>
+    <li>✅ Logo Design - 30 videos</li>
+    <li>✅ Motion Graphics Course - 47 videos</li>
+    <li>✅ Video Editing Full Course - 35 videos</li>
+    <li>✅ YouTube Earnings Course - 30 videos</li>
+    <li>✅ Facebook Hacking - 21 videos</li>
+    <li>✅ Ethical Hacking - 47 videos</li>
+    <li>✅ Wi-Fi Hacking - 14 videos</li>
+    <li>✅ Black Hat Money Hacking - 53 videos</li>
+    <li>✅ Android App Development - 58 videos</li>
+    <li>✅ Android Games Development - 52 videos</li>
+    <li>✅ Web Design & Development - 100+ videos</li>
+    <li>✅ WordPress Theme Development - 47 videos</li>
+    <li>✅ Content Writing Course - 27 videos</li>
+    <li>✅ Google Top Ranking Course - 33 videos</li>
+    <li>✅ AutoCAD Course - 56 videos</li>
+</ul>
+
+<p><strong>💡 500+ Freelancing Courses (in Bengali) (Free Bonus)!</strong><br>
+💡 5,000 Important PDF Books (in Bengali) (Free Bonus)!<br>
+💡 Plus, 480+ additional worldly courses that cover 99% of the market.<br>
+💡 Also included: Nearly all classic Bengali literature in PDF format!</p>
+
+<p><strong>🔰 Features:</strong></p>
+<ul>
+    <li>✅ Access will be provided via your Gmail ID.</li>
+    <li>✅ All materials will be available in one Google Drive folder.</li>
+    <li>✅ Lifetime access – never removed.</li>
+    <li>✅ Download and view anytime you want.</li>
+    <li>✅ Receive updates immediately when something new is added.</li>
+    <li>✅ The resource database is well-organized, so you can find everything easily.</li>
+</ul>
+
+<p><strong>Course Features:</strong></p>
+<ul>
+    <li>🚀 Fast Delivery</li>
+    <li>📁 Lifetime Drive Access</li>
+    <li>🎥 Demo Class Available</li>
+    <li>📚 Fully Updated Class Content</li>
+</ul>
+
+<p><strong>💡 Combo Price: ONLY 2000 BDT!</strong>
+
        </div>
  
 </section>
