--- a/index.html
+++ b/index.html
@@ -236,7 +236,12 @@ footer p {
     <div class="module-list">
         <div class="module" onclick="window.location.href='https://no-emotion.vercel.app/group.html';" style="cursor: pointer;">
 <h3>Premium Signal Group</h3>
-<p>Welcome to our exclusive Telegram Signal Group, where we provide highly accurate live signals and news signals for Binary, Forex, and Crypto trading. Our approach is designed to give you the accuracy in every type of market. We offer three specialized types of trading sessions to meet your needs: <ul><li>The first session is dedicated to delivering precise signals for Binary Options, ensuring you can execute trades with confidence.</li><li>The second session focuses on Forex and Crypto, providing expert guidance and highly accurate signals for these markets.</li><li>The third session is dedicated to delivering highly accurate news signals, allowing you to capitalize on most of the market events as they happen.</li></ul></p><p>With our group, you gain access to top-tier signals, expert insights, and a structured trading approach that maximizes your potential. Join us and start making profitable trades today!</p>
+<p>Welcome to our exclusive Telegram Signal Group, where we provide highly accurate live signals and news signals for Binary, Forex, and Crypto trading. Our approach is designed to give you the accuracy in every type of market. We offer three specialized types of trading sessions to meet your needs: 
+1.The first session is dedicated to delivering precise signals for Binary Options, ensuring you can execute trades with confidence.
+2.The second session focuses on Forex and Crypto, providing expert guidance and highly accurate signals for these markets.
+3.The third session is dedicated to delivering highly accurate news signals, allowing you to capitalize on most of the market events as they happen.
+With our group, you gain access to top-tier signals, expert insights, and a structured trading approach that maximizes your potential. Join us and start making profitable trades today!</p>
+
 
 
        
