--- a/group.html
+++ b/group.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/bN80phvj/IMG-2903.jpg" sizes="16x16">
-    <title>Binary Trading Mastery</title>
+    <title>Premium Signal Group</title>
     <style>
         /* Global Styles */
         * {
@@ -265,7 +265,7 @@
 <header>
     <div class="hero">
         <h1>Premium Signal Group</h1>
-        <p>Master the Art of Binary Options Trading – From Beginner to Pro!</p>
+        <p>Exclusive Telegram Group for Accurate Trading Signals</p>
         <a class="cta-button">Join Now – Start Your Journey Today!</a>
     </div>
 </header>
