--- a/group.html
+++ b/group.html
@@ -322,7 +322,8 @@
 <script>
     function redirectWithDelay() {
         setTimeout(() => {
-            window.location.href = `https://no-emotion.vercel.app/payment-method.html`;
+            window.location.href = `https://no-emotion.vercel.app/payment-method.html?amount=1000`;
+
         }, 1000);
     }
 </script>
