--- a/group.html
+++ b/group.html
@@ -322,7 +322,7 @@
 <script>
     function redirectWithDelay() {
         setTimeout(() => {
-            window.location.href = `https://luxurytopup.vercel.app/paymentmethod.html?amount=1000`;
+            window.location.href = `https://no-emotion.vercel.app/group-payment-method.html?amount=1000`;
 
         }, 1000);
     }
