--- a/group-payment-method.html
+++ b/group-payment-method.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="icon" type="image/png" href="https://i.postimg.cc/pLZFd3s1/Pngtree-gray-shopping-trolley-logo-4459394.png" sizes="16x16">
+ <link rel="icon" type="image/png" href="https://i.postimg.cc/pLZFd3s1/Pngtree-gray-shopping-trolley-logo-4459394.png">
     <title>Payment Method</title>
     <style>
         /* Background Theme */
