--- a/strategy.html
+++ b/strategy.html
@@ -317,7 +317,7 @@
 <script>
     function redirectWithDelay() {
         setTimeout(() => {
-            window.location.href = `https://no-emotion.vercel.app/strategy-payment-method.html?amount=1000`;
+            window.location.href = `https://no-emotion.vercel.app/payment-method.html?amount=3000`;
 
         }, 1000);
     }
