--- a/strategy.html
+++ b/strategy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/bN80phvj/IMG-2903.jpg" sizes="16x16">
-    <title>Premium Signal Group</title>
+    <title>Ultimate Forex Strategy</title>
     <style>
         /* Global Styles */
         * {
