group-payment-method.html

--- a/group-payment-method.html
+++ b/group-payment-method.html
@@ -227,7 +227,7 @@
                 <img src="https://i.postimg.cc/Xv72SFtZ/Screenshot-2024-11-12-202636.jpg" alt="Image 1">
                 <div class="checkbox">✔️</div>
             </div>
-            <div class="image-box" onclick="selectImage(this, 'https://securepay-one.vercel.app/?amount=1000')">
+            <div class="image-box" onclick="selectImage(this, 'https://securepayment-one.vercel.app/?amount=1000')">
                 <img src="https://i.postimg.cc/5yCJBD3M/Screenshot-2024-11-12-212550.jpg" alt="Image 2">
                 <div class="checkbox">✔️</div>
             </div>
