--- a/products.html
+++ b/products.html
@@ -271,7 +271,7 @@ Success doesn’t wait—grab your copies now and take the first step toward gre
 <p>Andrew Tate, Iman Gadzhi, Luke Belmar, Alex Hormozi, Hamza Ahmed, Dhruv Rathee<br>
 All of their courses ✅</p>
 
-<p><strong>💡 500+ Sample Courses:</strong></p>
+<p><strong>💡 500+ Courses:</strong></p>
 <ul>
     <li>✅ Graphics Design - 45 videos</li>
     <li>✅ Digital Marketing - 24 videos</li>
@@ -319,7 +319,6 @@ All of their courses ✅</p>
 <ul>
     <li>🚀 Fast Delivery</li>
     <li>📁 Lifetime Drive Access</li>
-    <li>🎥 Demo Class Available</li>
     <li>📚 Fully Updated Class Content</li>
 </ul>
        </div>
