payment-method.html

--- a/payment-method.html
+++ b/payment-method.html
@@ -248,7 +248,7 @@
     
 		
 		
-		<div class="image-box" onclick="selectImage(this, 'https://nagad-manual.vercel.app/?redirect=https://no-emotion.vercel.app/contact-details.html')">
+		<div class="image-box" onclick="selectImage(this, 'https://nagad-manual.vercel.app/?redirect=https://no-emotion.vercel.app/contact-details.html&')">
         <img src="https://i.postimg.cc/WbDfFhk9/IMG-3411.jpg" alt="Rocket">
         <div class="checkbox">✔️</div>
              </div>
